fixed minor layout issues on mobile

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -74,6 +74,10 @@ h1{
     flex-shrink: 0;
 }
 
+.submitButton:hover{
+    background-color: var(--clr-very-dark-grey);
+}
+
 .results{
     min-width: 80%;
     max-width: 90%;
@@ -135,6 +139,13 @@ h1{
     color: hsl(228, 45%, 44%);
 }
 
+@media only screen and (max-width: 950px){
+
+    .dataResult{
+        font-size: 1.2rem;
+    }
+}
+
 @media only screen and (max-width: 720px) {
 
     .textInput{
@@ -142,7 +153,7 @@ h1{
     }
 
     .ipAddressForm{
-        width: 90%;
+        width: 85%;
     }
 
     .results{
@@ -150,8 +161,9 @@ h1{
         align-items: center;
         height: auto;
         gap: 25px;
-        transform: translateY(-20%);
-        width: 85%;
+        transform: translateY(-30%);
+        width: 80%;
+        padding: 20px 35px;
     }
 
     .data{
@@ -159,10 +171,10 @@ h1{
         margin: 0;
         padding: 0;
         align-items: center;
+        gap: 5px;
     }
 
     .dataResult{
-        font-size: 1.2rem;
         text-align: center;
     }
 }
